Modernize rib-impl
Use HashMap.newHashMap() and Map.of().

Change-Id: I4d8d625410983db776f67e5d3a023ed544881ac4
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>